style.css
/* style.css */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* FONTS */
@font-face {
    font-family: 'Futura Light';
    src: url('fonts/futura-light.woff2') format('woff2');
}

@font-face {
    font-family: 'Futura Regular';
    src: url(fonts/futura-regular.woff2) format('woff2');
}

@font-face {
    font-family: 'TheHellClub1-Regular';
    src: url('fonts/TheHellClub1-Regular.woff2') format('woff2');
}

.hellclub-font {
    font-family: 'TheHellClub1-Regular', sans-serif;
    font-weight: bolder;
    font-size: larger;
}

strong{
    font-family: 'Futura Regular';
}

/* GLOBAL */
body {
    font-family: 'Futura Light';
    overflow-x: hidden;
}

section {
    padding: 20px;
    min-height: 300px;
    background-size: cover;
    background-position: center;
    text-align: center;
    padding-top: 3%;
    min-height: fit-content;
}

/* HOME SECTION */
.home-section {
    background-image: url('images/bck-clouds.jpg');
}

.logo-container img {
    max-width: 80vw;
    min-width: 700px;
    height: auto;
}

.main-menu ul {
    list-style-type: none;
    padding: 0;
    margin: 2% 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-menu ul li {
    margin: 0 4%;
}

.main-menu ul li a {
    text-decoration: none;
    color: #333;
    font-size: 1.8em;
    opacity: 1;
    transition: opacity 0.3s ease-in-out;
    font-family: 'TheHellClub1-Regular', sans-serif;
}

.main-menu ul li a:hover {
    opacity: 0.3;
}

.music-dropdown {
    position: relative;
}

.music-dropdown-content {
    visibility: hidden; 
    opacity: 0;
    position: absolute;
    background-color: transparent;
    min-width: 300px;
    z-index: 1;
    left: 50%;
    transform: translateX(-50%);
    transition: visibility 0.3s, opacity 0.3s ease-in-out;
}

.music-dropdown:hover .music-dropdown-content {
    visibility: visible; 
    opacity: 1;
}

.music-dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.music-dropdown:hover .music-dropdown-content {
    display: block;
}

.face-overlay {
    position: inherit;
    z-index: 2;
    transform: translate(20%, 5vh);
}

.face-overlay img {
    width: 90vw;
    max-width: 800px;
    height: auto;
}

@media (max-width: 768px) {
    .main-menu ul {
        flex-direction: column;
        padding: 20px 0;
    }

    .main-menu ul li {
        margin: 10px 0; 
        width: 100%;
    }

    
    .main-menu ul li a {
        font-size: 2em; 
    }

    .music-dropdown-content a {
        display: none;
    }
    
    .logo-container img {
        min-width: 90vw;
    }

    
    .face-overlay img {
        position: absolute;
        width: 60%; 
        max-width: 400px; 
        bottom: 10px;
        height: auto;
        transform: translate(-40%, -15%);
        pointer-events: none;
    }
}

/* SECTION ELEMENTS */
.black-section {
    background-image: url('images/bck-black.jpg');
}

.section-title {
    font-family: 'TheHellClub1-Regular', sans-serif;
    text-align: center;
    margin-bottom: 2%;
    font-size: 3.5em;
}

@media screen and (max-width: 768px) {
    .section-title {
        font-size: 2.5em;
    }
}

.white-title {
    color: white;
}

.black-title {
    color: black;
}

/* PROJECTS SECTION */
.grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
    grid-gap: 1%;
    margin: 0 5%;
    margin-bottom: 5%;
}

.grid-item {
    position: relative;
    cursor: pointer;
    overflow: hidden;
    background-color: black;
    height: 20vh;
}

.grid-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    opacity: 0.6;
    transition: opacity 0.3s ease-in-out;
}

.grid-item:hover img {
    opacity: 1.0;
}

.title-overlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    color: white;
    text-align: center;
    padding: 10px 0;
    z-index: 1;
    font-size: 2em;
    opacity: 1;
    transition: opacity 0.3s ease;
}

.grid-item:hover .title-overlay {
    opacity: 0;
}

.video-link {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 2;
    opacity: 0;
}

@media screen and (max-width: 768px) {
    .grid-container {
        grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
        margin: 0 10%;
    }
    .grid-item{
        height: auto;
    }
}

/* ABOUT SECTION */
.about-section {
    background-color: white;
    padding: 20px;
}

.about-subsection {
    background-image: url('images/bck-clouds.jpg');
    margin: 20px auto;
    padding: 30px;
    max-width: 800px;
    width: 100%;
    border-radius: 5px;
    font-size: 1.1em;
    font-style: italic;
}

.about-main-content {
    max-width: 800px;
    margin: 0 auto;
    font-size: 1em;
    line-height: 1.6;
    text-align: justify;
    padding: 20px;
}

.about-main-content p {
    margin-bottom: 15px;
}

.about-main-content ul {
    list-style-type: disc;
    margin-left: 50px;
    margin-bottom: 15px;
}

.about-main-content li {
    margin-bottom: 0px;
}

.about-main-content a {
    color: inherit;
    text-decoration: none;
    font-weight: bold;
    font-style: italic;
    font-family: 'Futura Regular';
    opacity: 1;
    transition: opacity 0.3s ease-in-out;
}

.about-main-content a:hover {
    opacity: 0.3;
}

@media (max-width: 768px) {
    .about-main-content {
        max-width: 90%;
        padding: 10px;
    }
}

/* MUSIC FOR FILM SECTION */
.music-for-film-section {
    background-image: url('images/bck-clouds.jpg');
    overflow: hidden;
    position: relative;
}

.carousel-outer-container {
    display: flex; 
    justify-content: center; 
    align-items: center; 
    width: 100%; 
    margin: auto;
}

.carousel-container {
    width: 75%; 
    overflow: hidden; 
}


.video-wrapper {
    display: flex; 
    transition: transform 0.5s ease-in-out; 
}

.video-wrapper iframe {
    min-width: 100%; 
    height: 60vh;
    margin-right: 20px; 
}

.arrow {
    cursor: pointer;
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    user-select: none;
    opacity: 1.0;
    transition: opacity 0.3s ease-in-out;
}

.arrow img {
    width: 100%;
    height: auto;
}

.arrow:hover {
    opacity: 0.3;
}

@media (max-width: 768px) {
    .carousel-container {
        width: 90%;
    }

    .video-wrapper iframe {
        height: 50vh;
    }
}




/* CONTACT SECTION */
.contact-section {
    background-image: url('images/bck-faces.jpg');
}

.social-links {
    text-align: center;
    margin: 20px 0;
}

.social-links a {
    display: inline-block;
    margin: 0 10px;
}

.social-links img {
    width: 40px;
    height: auto;
    transition: transform 0.3s ease-in-out;
}

.social-links a:hover img {
    transform: scale(1.1);
}

@media screen and (max-width: 768px) {
    .social-links img {
        width: 30px;
    }
    
}

/* FOOTER */
.site-footer
{
    background-color: #cbddea; 
    color: white; 
    text-align: center; 
    padding: 7px 0; 
    font-size: 0.8em; 
    position: relative;
    bottom: 0;
    width: 100%;
}

/* PARALLAX EFFECT */
.home-section, .black-section, .music-for-film-section {
    background-attachment: fixed; 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

